--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Link to your custom stylesheet -->
     <link rel="stylesheet" href="style.css">
 
-    <!-- <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
     <script type="module">
         import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js";
@@ -48,7 +48,7 @@
                 console.log('User is signed in');
             }
         });
-    </script> -->
+    </script>
 
 <script src="script.js"></script>
     
